app2AuthenticationGenerator/microservice2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-microservice2
spec:
  selector:
    app: app2-microservice2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8011
  type: ClusterIP
